# desktop-scout

./: Cargo.toml  Justfile  README.md
src/: args.rs  check.rs  desktop.rs  linux_fs.rs  log.rs  main.rs  report.rs  scan.rs
