[package]
name = "desktop-scout"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"
readme = "README.md"
authors = ["Hendrik Böck <hendrikboeck.dev@protonmail.com>"]
description = "A command-line tool to detect broken or stale desktop entries on Linux systems."
repository = "https://github.com/hendrikboeck/desktop-scout"
homepage = "https://github.com/hendrikboeck/desktop-scout"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
console-subscriber = { version = "0.5.0", optional = true }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
xdg = "3.0.0"
shlex = "1.3.0"
futures = "0.3.31"
num_cpus = "1.17.0"
serde_json = "1.0.145"

[features]
default = []
tokio-console = ["console-subscriber"]
